# privmedchat

./: .env.example  .gitignore  README.md  environment.yaml  main.py  pyproject.toml
configs/ppo/: llama3_8b_instruct.yaml  llama3_8b_instruct_ep1.yaml  llama3_8b_instruct_ep3.yaml  llama3_8b_instruct_ep5.yaml  llama3_8b_instruct_ep7.yaml
configs/reward_model/: llama3_8b_instruct.yaml  llama3_8b_instruct_ep1.yaml  llama3_8b_instruct_ep3.yaml  llama3_8b_instruct_ep5.yaml  llama3_8b_instruct_ep7.yaml
configs/sft/: llama3_8b_instruct.yaml  llama3_8b_instruct_dp_ep1.yaml  llama3_8b_instruct_dp_ep3.yaml  llama3_8b_instruct_dp_ep5.yaml  llama3_8b_instruct_dp_ep7.yaml  llama3_8b_instruct_overfit.yaml
scripts/: download_data.sh  train_ppo.sh  train_rm.sh  train_sft.sh
src/dataset_builder/: __init__.py  deidentify.py  generate.py  io_adapters.py
src/ppo/: __init__.py  dataset.py  model.py  train.py  utils.py
src/reward_model/: __init__.py  model.py  train.py  utils.py
src/sft/: train.py  utils.py
